# linetime

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
scripts/: build_with_progress.sh  demo_unfolding.sh  test_build.sh  write_formatting.py  write_to_stderr_and_stdout.py
src/: command.rs  error.rs  main.rs  main_loop.rs  output.rs  token.rs
src/output/: buffered.rs  timestamp.rs
src/token/: escape.rs  read_char.rs
tests/: integration_test.rs  marionette.rs
tests/assertions/: mod.rs
tests/marionette_control/: mod.rs
tests/paths/: mod.rs
tests/program_under_test/: mod.rs
