[package]
name = "linetime"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Johannesson"]

[dependencies]
gumdrop = "0.8.1"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
actix-web = { version = "4.9.0", default-features = false }
cargo_metadata = "0.19.1"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.134", default-features = false }
tokio = { version = "1.42.0", default-features = false, features = ["io-util", "macros", "process", "rt"] }

[[test]]
# Dummy command configured as an integration test binary without harness.
# Unfortunately it will be executed by cargo test, but it is better than having
# it as an additional binary in src/bin/ since the extra dependencies will grow
# the main binary with ~0.5 MiB.
name = "marionette"
harness = false
